# GT_SD06_module_RTPSender

./: .gitignore  CMakeLists.txt  Makefile  build.sh  toolchain-mc6630.cmake
built/: CMakeCache.txt  Makefile  cmake_install.cmake  module_rtpsender
built/src/: Makefile  cmake_install.cmake
include/: CustomFramedSource.hh  RTPSendingSession.hh
src/: CMakeLists.txt  CustomFramedSource.cpp  RTPSendingSession.cpp  main.cpp
tests/: manualTesting_frameSource_useRecordFile.cpp
thirdlib/include/openssl/: configuration.h
thirdlib/include/recordlib/: ll_headers.h  ze_rec_read.h
thirdlib/lib/curl/: libcurl.so.4.8.0
thirdlib/lib/openssl/: libcrypto.so.3  libssl.so.3
